# rag_sample

./: .gitignore  README.md  pyproject.toml
notebooks/: langchain_api.py  langchain_workflow_and_agents.py
notebooks/langchain_examples/: parallel.py
